horizontal scroll fixed

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -130,6 +130,7 @@ body {
 /* ==================CANVAS================== */
 canvas{
   position: absolute;
+  width: 100%;
 }
 h1, h2, h3 {
   color: var(--title-color);
@@ -201,9 +202,6 @@ input {
   top: 0;
   left: 0;
   z-index: var(--z-fixed);
-  background-color: transparent;
-  /* background-image: linear-gradient(-135deg, #7BC4DA 0%, #4E5ABE 100%);
-  background-image: linear-gradient(-135deg, #363256 0%, #4C4B78 92%); */
   background: #3A375C;
 }
 
